--- a/style.css
+++ b/style.css
@@ -2,11 +2,21 @@
     box-sizing: border-box;
     font-family: Arial;
 }
+:root{
+    --primary-color: hsl(240,3%,7%); 
+    --secondary-color: white;
+    --third-color: hsl(200,1%,34%);
+}
+.white-theme{
+    --primary-color: white; 
+    --secondary-color: hsl(240,3%,7%);
+}
+
 html {
     height: 100%;
   }
 body{
-    background-color: hsl(240,3%,7%);
+    background-color: var(--primary-color);
     display: flex;
     flex-direction: column;
     min-height: 90vh;
@@ -21,21 +31,22 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    margin-left: 60px;
     height: 70px;
+    margin-left: 40px;
     
     
 }
 .nav{
     font-size: 30px;
-    color: white;
-    border-bottom: 0.1px solid white;
+    color: var(--secondary-color);
+    border-bottom: 0.1px solid var(--secondary-color);
 }
 
 .btnight{
     display: inline-flex;
-    height: 50px;
+    height: 30px;
     cursor: pointer;
+    
     
     
     
@@ -116,7 +127,6 @@ body{
 
 .tile{
     font-size: 2em;
-    color: white;
     border: .05em solid hsl(240,2%, 23%);
     text-transform: uppercase;
     font-weight: bold;
@@ -127,21 +137,24 @@ body{
     transition: transform 250ms linear;
     
 }
-
 .tile[data-state="active"] {
     border-color: hsl(200,1%,34%);
+    color: var(--secondary-color);
 }
 .tile[data-state="wrong"] {
     border: none;
     background-color: hsl(240,2%, 23%);
+    color: white;
 }
 .tile[data-state="wrong-location"] {
     border: none;
     background-color: hsl(49,51%, 47%);
+    color: white;
 }
 .tile[data-state="correct"] {
     border: none;
     background-color: hsl(115,29%, 43%);
+    color: white;
 }
 
 .tile.shake{
